--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_bloc: null
+  get_it: ^7.6.0
   go_router: ^10.0.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+
+  
 
 dev_dependencies:
   build_runner: ^2.4.6
