done app for luanch icon

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,12 +41,18 @@ dependencies:
   
 
 dev_dependencies:
+  flutter_launcher_icons:
   build_runner: ^2.4.6
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
   hive_generator: ^2.0.0
 
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/2854780.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
